TASKS: fix invisible edit task icon on hover

--- a/gmail-dark.less.user.css
+++ b/gmail-dark.less.user.css
@@ -1061,9 +1061,9 @@
     }
     /*white icons*/
 
-    .EfSjgb,
-    .UXfMHb {
+    .EfSjgb, .UXfMHb, .EeFUTc {
         color: white;
+        fill: #ffffffc2;
     }
     /*add task button*/
 
